# feff10-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/feff-cli/: Cargo.toml
crates/feff-cli/src/: main.rs
crates/feff-cli/src/cli/: commands.rs  dispatch.rs  helpers.rs  mod.rs
crates/feff-cli/tests/: cli_compatibility.rs  parity_workflow_guard.rs  quality_workflow_guard.rs  regression_cli.rs
docs/: cutover-rehearsal-checklist.md  developer-workflows.md  operator-guide.md  rollback-rehearsal-checklist.md  troubleshooting.md
gap/: fortran-to-rust-file-gap.csv  fortran-to-rust-gap-report.md
src/: comparator.rs  lib.rs  main.rs  regression.rs
tasks/: atom-energy-s02-fixtures.json  atom-radial-update-fixtures.json  common-edge-lifetime-fixtures.json  common-regression-fixtures.json  cutover-rehearsal-2026-02-16.md  cutover-rehearsal-2026-02-17.md  cutover-rehearsal-2026-02-18.md  cutover-rehearsal-2026-02-19.md  exchange-regression-fixtures.json  feff10-compatibility-matrix.md  fortran-rust-boundary-map.md  full-module-migration-ledger.csv  golden-fixture-manifest.json  math-regression-fixtures.json  migration-contract-reference.md  migration-decision-log.md  migration-gap-analysis.md  numeric-tolerance-policy.json  oracle-16-module-migration-summary.md  prd-feff10-rust-true-compute-rewrite-claude-review.md  prd-feff10-rust-true-compute-rewrite-improved.md  prd-feff10-rust-true-compute-rewrite.md  prd-migrate-feff10-to-rust-improved.md  prd-runtime-support-migration-phase1.md  refactoring-plan.md  rollback-rehearsal-2026-02-16.md  rollback-rehearsal-2026-02-17.md  rollback-rehearsal-2026-02-18.md  rollback-rehearsal-2026-02-19.md  sfconv-regression-fixtures.json
tests/: band_parity.rs  cli_compatibility.rs  (+19 more)
(+517 files in other folders)
