[workspace]
resolver = "3"
members = ["crates/feff-core", "crates/feff-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
feff-core = { path = "crates/feff-core" }
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
thiserror = "2"
