[package]
name = "feff-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "feff10-rs"
path = "src/main.rs"

[dependencies]
clap.workspace = true
feff-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
feff-core.workspace = true
serde_json.workspace = true
tempfile.workspace = true
